# djangorestframework-types

./: .gitignore  README.md  coreapi-stubs  coreschema-stubs  openapi_codec-stubs  package.json  pyproject.toml  pyrightconfig.json  rest_framework-stubs  rest_framework_swagger-stubs  tox.ini
.circleci/: config.yml
rest_framework-stubs/: authentication.pyi  decorators.pyi  exceptions.pyi  fields.pyi  filters.pyi  generics.pyi  mixins.pyi  pagination.pyi  parsers.pyi  permissions.pyi  relations.pyi  renderers.pyi  request.pyi  response.pyi  routers.pyi  serializers.pyi  test.pyi  throttling.pyi  urlpatterns.pyi  validators.pyi  views.pyi  viewsets.pyi
rest_framework-stubs/management/commands/: generateschema.pyi
rest_framework-stubs/schemas/: coreapi.pyi  generators.pyi  openapi.pyi  utils.pyi
rest_framework-stubs/templatetags/: rest_framework.pyi
s/: lint
tests/: test_restframework.py
typings/: coreapi  coreschema  openapi_codec  rest_framework  rest_framework_swagger
typings/rest_framework/: authentication.pyi  decorators.pyi  filters.pyi  generics.pyi  mixins.pyi  permissions.pyi  request.pyi  response.pyi  test.pyi  throttling.pyi
