[tool.poetry]
name = "djangorestframework-types"
version = "0.1.0"
description = "Type stubs for Django Rest Framework"
authors = ["Steve Dignam <steve@dignam.xyz>"]
repository = "https://github.com/sbdchd/djangorestframework-types"
readme = "README.md"
license = "MIT"
keywords = ["django", "djangorestframework", "types", "mypy", "stubs"]
packages = [
  { include = "rest_framework-stubs" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
ipython = "^7.19"
isort = "^5.6"
mypy = "^0.790.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
