[tool.poetry]
name = "djangorestframework-types"
version = "0.7.0"
description = "Type stubs for Django Rest Framework"
authors = ["Steve Dignam <steve@dignam.xyz>"]
repository = "https://github.com/sbdchd/djangorestframework-types"
readme = "README.md"
license = "MIT"
keywords = ["django", "djangorestframework", "types", "mypy", "stubs"]
packages = [
  { include = "rest_framework-stubs" },
  { include = "coreapi-stubs" },
  { include = "coreschema-stubs" },
  { include = "rest_framework_swagger-stubs" },
  { include = "openapi_codec-stubs" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
ipython = "^7.19"
mongo-types = "^0.7.5"
django-types = "^0.3.1"
django = "^3.1"
flake8 = "^3.8"
flake8-pyi = "^20.10"
mypy = "^0.982"
isort = "5.10.1"
black = "^22.10.0"
types-requests = "^2.28.11"

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
